[gd_scene load_steps=5 format=3 uid="uid://dgneai6ks0f57"]

[ext_resource type="Script" path="res://scripts/shooter.gd" id="1_s1in7"]
[ext_resource type="Texture2D" uid="uid://m1xsth3c3nfa" path="res://assets/shotgun_temp.png" id="2_26r80"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1x0m7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_26r80")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xwo68"]
radius = 1.0
height = 10.7676

[node name="Shooter" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_s1in7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3.55271e-15, -0.685)
rotation = 1.5708
scale = Vector2(0.006, 0.006)
sprite_frames = SubResource("SpriteFrames_1x0m7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_xwo68")

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ShotTimer" type="Timer" parent="."]

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
